# extractors

./: README.md  pyproject.toml
docs/: supported-formats.md
src/extractors/: __init__.py  __main__.py  _logging.py  bootstrap.py  cli.py  errors.py  facade.py  interfaces.py  markdown_render.py  mime_detect.py  ocr.py  registry.py  text_layer.py  types.py
src/extractors/handlers/: _markdown.py  _soffice.py  archives.py  base.py  best_effort.py  csv_tsv.py  data.py  doc.py  docx.py  email_msg.py  epub.py  excel.py  fitz_doc.py  html.py  image.py  iwork.py  opendocument.py  pdf.py  pim.py  plain_text.py  powerpoint.py  recognized.py  rtf.py  structured.py  web_docs.py  xml.py
tests/: conftest.py  test_bootstrap.py  test_cli.py  test_errors.py  test_facade.py  test_logging.py  test_main_module.py  test_markdown_helpers.py  test_markdown_render.py  test_mime_detect.py  test_ocr.py  test_registry.py  test_text_layer.py  test_types.py
tests/handlers/: test_archives.py  test_archives_extra.py  test_base.py  test_best_effort.py  test_csv_tsv.py  test_data.py  test_doc.py  test_docx.py  test_email_msg.py  test_epub.py  test_excel.py  test_fitz_doc.py  test_html.py  test_image.py  test_iwork.py  test_opendocument.py  test_opendocument_extra.py  test_pdf.py  test_pim.py  test_plain_text.py  test_powerpoint.py  test_recognized.py  test_rtf.py  test_soffice.py  test_structured.py  test_web_docs.py  test_xml.py
